<resources>
    <string name="app_name">MyApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">"Ingrese su correo"</string>
    <string name="titulo">"Iniciar sesión"</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">Deben ser más de 5 caracteres</string>
    <string name="login_failed">"Error de usuario o contraseña"</string>


    <string name="continuar">Continuar</string>
    <string name="sexo">Sexo:</string>
    <string name="sexo_h">Hombre</string>
    <string name="sexo_m">Mujer</string>
    <string name="sexo_o">Otro</string>
    <string name="iniciar_SG">Iniciar sesión con Google</string>
    <string name="iniciar_SF">Iniciar sesión con Facebook</string>
    <string name="user">"Usuario"</string>
    <string name="password">"Ingrese su contraseña"</string>
    <string name="passwordCr">"Cree una contraseña"</string>
    <string name="passwordCo">"Confirme la contraseña"</string>
    <string name="reg">"Registrarse"</string>
    <string name="forgot_pass">"¿Olvidaste tu usuario o contraseña?"</string>
    <string name="success_login">"Se enviará un correo con instrucciones"</string>
    <string name="notEqPass">"Las contraseñas tienen que ser iguales"</string>
    <string name="datos_incom">"Los campos deben estar llenos"</string>
    <string name="last_miss">"Debe seleccionar el ultimo campo"</string>
    <string name="info">"Obteniendo informacion adicional del usuario..."</string>
    <string name="ubicacion">"Localizacion no disponible"</string>
    <string name="reedireccion">"Será reedirigido en un momento"</string>
    <string name="miau">"miau"</string>


</resources>